--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
 # Use an official Node runtime as a parent image
-FROM node:14-slim AS build
+FROM node:14-alpine
 
 # Set the working directory in the container
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Copy the package.json and package-lock.json files to the container
 COPY package*.json ./
@@ -12,14 +12,6 @@ RUN npm install
 
 # Copy the rest of the application code to the container
 COPY . .
-
-FROM alpine:3.16.7
-
-WORKDIR /app
-
-RUN apk update && apk add npm
-
-COPY --from=build /usr/src/app /app
 
 # Expose the port the app runs on
 EXPOSE 3000
